third_party/move/move-prover/tests/sources/functional/data_invariant_for_mut_ref_arg.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
  ┌─ tests/sources/functional/data_invariant_for_mut_ref_arg.move:8:9
  │
8 │         invariant len(v) == 0;
  │         ^^^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:15: push_1
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:17: push_1
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:19: push_1
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:8

error: data invariant does not hold
  ┌─ tests/sources/functional/data_invariant_for_mut_ref_arg.move:8:9
  │
8 │         invariant len(v) == 0;
  │         ^^^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:22: push_2
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:24: push_2
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:26: push_2
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:27: push_2
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:28: push_2
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:8

error: data invariant does not hold
  ┌─ tests/sources/functional/data_invariant_for_mut_ref_arg.move:8:9
  │
8 │         invariant len(v) == 0;
  │         ^^^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:31: push_3
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:33: push_3
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:35: push_3
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:36: push_3
  =         result = <redacted>
  =         s = <redacted>
  =     at tests/sources/functional/data_invariant_for_mut_ref_arg.move:8
